--- a/Android/ArtI/app/src/main/res/values/colors.xml
+++ b/Android/ArtI/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="font_color">#000000</color>
     <color name="text_disabled">#DADADA</color>
 
+    <color name="unselected_color">#9DB2CE</color>
+    <color name="selected_color">#386Bf6</color>
 
 
 
