--- a/Android/ArtI/app/src/main/res/layout/activity_main.xml
+++ b/Android/ArtI/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_host_fragment_container"
             android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@id/bn_menu"
@@ -53,6 +53,7 @@
         <!--            app:shapeAppearanceOverlay="@style/CustomShapeFab" />-->
 
         <ImageView
+            android:id="@+id/btn_art_upload"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:background="@drawable/ripple_add_button"
@@ -66,6 +67,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/bn_menu" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="메인 액티비티"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
