--- a/Android/ArtI/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/Android/ArtI/app/src/main/res/menu/menu_bottom_nav.xml
@@ -12,7 +12,7 @@
         android:title="@string/menu_search" />
 
     <item
-        android:id="@+id/blank"
+        android:id="@+id/blankFragment"
         android:enabled="false"
         android:title="" />
 
