feat : 바텀 네비바 이동 시 메뉴 스택 제거

--- a/Android/ArtI/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/Android/ArtI/app/src/main/res/menu/menu_bottom_nav.xml
@@ -12,8 +12,7 @@
         android:title="@string/menu_search" />
 
     <item
-        android:id="@+id/blankFragment"
-        android:enabled="false"
+        android:id="@+id/artworkUploadFragment"
         android:title="" />
 
     <item
