feat : login UI 개발

--- a/Android/ArtI/app/src/main/res/values/colors.xml
+++ b/Android/ArtI/app/src/main/res/values/colors.xml
@@ -5,12 +5,15 @@
 
     <color name="point_color">#386Bf6</color>
     <color name="trans_point_color">#99386Bf6</color>
+    <color name="trans_cover_color">#40000000</color>
     <color name="background_color">#F7F7F7</color>
     <color name="font_color">#000000</color>
     <color name="text_disabled">#DADADA</color>
 
     <color name="unselected_color">#9DB2CE</color>
     <color name="selected_color">#386Bf6</color>
+
+    <color name="login_edit_color">#70FFFFFF</color>
 
 
 
