--- a/Android/ArtI/app/src/main/res/layout/activity_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.LoginActivity">
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/login_ft"
-        android:name="com.hexa.arti.ui.login.LoginFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/login_nav_graph"
+        />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
