--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -43,4 +43,12 @@
         android:id="@+id/splashActivity"
         android:name="com.hexa.arti.ui.SplashActivity"
         android:label="SplashActivity" />
+    <fragment
+        android:id="@+id/surveyFragment"
+        android:name="com.hexa.arti.ui.survey.SurveyFragment"
+        android:label="SurveyFragment" >
+        <action
+            android:id="@+id/action_surveyFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
