--- a/Android/ArtI/app/src/main/res/values/themes.xml
+++ b/Android/ArtI/app/src/main/res/values/themes.xml
@@ -50,5 +50,13 @@
         <item name="android:layout_marginStart">10dp</item>
     </style>
 
+
+    <style name="SurveyImage" >
+        <item name="android:layout_rowWeight">1</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
     <style name="Theme.ArtI" parent="Base.Theme.ArtI" />
 </resources>
