--- a/Android/ArtI/app/src/main/res/layout/bottom_sheet.xml
+++ b/Android/ArtI/app/src/main/res/layout/bottom_sheet.xml
@@ -24,8 +24,8 @@
                 android:id="@+id/tv_artmuseum_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/inter_28pt_black"
                 android:text="병현의 미술관"
                 android:textSize="28sp"
@@ -36,7 +36,7 @@
                 android:id="@+id/iv_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
                 android:src="@drawable/ic_red_play"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +78,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_introduce" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_introduce_content"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
