--- a/Android/ArtI/app/src/main/res/values/themes.xml
+++ b/Android/ArtI/app/src/main/res/values/themes.xml
@@ -50,12 +50,32 @@
         <item name="android:layout_marginStart">10dp</item>
     </style>
 
-
+    <!-- Survey -->
     <style name="SurveyImage" >
         <item name="android:layout_rowWeight">1</item>
         <item name="android:layout_columnWeight">1</item>
         <item name="android:layout_margin">10dp</item>
         <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <!-- My ArtMuseum -->
+
+    <style name="SelectTextTitle" parent="TextAppearance.AppCompat">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="UnSelectTextTitle" parent="TextAppearance.AppCompat">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/disable_color</item>
+    </style>
+
+    <style name="MyGalleryTitleText" parent="TextAppearance.AppCompat">
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="Theme.ArtI" parent="Base.Theme.ArtI" />
