feat: 테마 명 수정 기능 추가

--- a/Android/ArtI/app/src/main/res/layout/fragment_my_gallery.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_my_gallery.xml
@@ -78,10 +78,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="병현이의 미술관"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/black"
                     android:clickable="false"
                     android:focusable="false"
                     android:enabled="false"
-                    android:backgroundTint=""
                     app:layout_constraintEnd_toStartOf="@+id/my_gallery_play_btn"
                     app:layout_constraintHorizontal_chainStyle="spread_inside"
                     app:layout_constraintStart_toStartOf="@+id/my_gallery_ct"
