--- a/Android/ArtI/app/src/main/res/layout/fragment_subscribe.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_subscribe.xml
@@ -68,6 +68,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="60dp"
+            android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_subscribe"
             app:layout_constraintEnd_toEndOf="parent"
