--- a/Android/ArtI/app/src/main/res/layout/item_my_gallery_theme.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_my_gallery_theme.xml
@@ -5,19 +5,45 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
+    <EditText
         android:id="@+id/theme_title_tv"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:layout_height="wrap_content"
         android:text="병현이의 절망"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:enabled="false"
+        android:focusable="false"
+        android:clickable="false"
+        android:textColor="@color/black"
+        android:background="@android:color/transparent"
         android:layout_margin="20dp"
         app:layout_constraintEnd_toStartOf="@id/theme_kebab_menu_iv"
         app:layout_constraintBottom_toTopOf="@+id/my_gallery_theme_gridLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/theme_check_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_done_24"
+        android:layout_marginStart="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/theme_title_tv"
+        app:layout_constraintStart_toEndOf="@+id/theme_title_tv"
+        app:layout_constraintTop_toTopOf="@+id/theme_title_tv" />
+
+    <ImageView
+        android:id="@+id/theme_cancel_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_clear_24"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/theme_title_tv"
+        app:layout_constraintStart_toEndOf="@+id/theme_check_iv"
+        app:layout_constraintTop_toTopOf="@+id/theme_title_tv" />
     <ImageView
         android:id="@+id/theme_kebab_menu_iv"
         android:layout_width="wrap_content"
