--- a/Android/ArtI/app/src/main/res/layout/item_subscribe.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_subscribe.xml
@@ -8,8 +8,9 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp">
 
         <LinearLayout
             android:id="@+id/subscribe_lt"
@@ -24,21 +25,23 @@
                 android:id="@+id/subscribe_profile_img_cv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_marginVertical="20dp"
+                android:layout_marginHorizontal="40dp"
                 app:cardCornerRadius="100dp">
 
                 <ImageView
                     android:id="@+id/subscribe_profile_iv"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/profile_img" />
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_margin="20dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="30dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -65,8 +68,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/black"
-            android:layout_marginHorizontal="10dp"
+            android:background="@color/trans_cover_color"
+            android:layout_marginHorizontal="5dp"
             app:layout_constraintEnd_toEndOf="@+id/subscribe_lt"
             app:layout_constraintStart_toStartOf="@+id/subscribe_lt"
             app:layout_constraintTop_toBottomOf="@+id/subscribe_lt" />/>
