--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:text="ID"
+                android:text="아이디"
                 app:layout_constraintBottom_toTopOf="@id/login_id_et"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_logo_iv" />
@@ -56,7 +56,7 @@
                 android:id="@+id/login_pw_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PW"
+                android:text="비밀번호"
                 android:layout_marginTop="40dp"
                 android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toTopOf="@id/login_pw_et"
@@ -91,10 +91,10 @@
                     style="@style/ButtonRoundShort8"
                     android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginHorizontal="20dp"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="30dp"
-                    android:text="Login" />
+                    android:text="로그인" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/sign_btn"
@@ -104,8 +104,8 @@
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="30dp"
                     android:paddingVertical="10dp"
-                    android:layout_marginHorizontal="30dp"
-                    android:text="Sign Up" />
+                    android:layout_marginHorizontal="20dp"
+                    android:text="회원가입" />
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
