feat 검색창 디테일 조절

--- a/Android/ArtI/app/src/main/res/layout/fragment_search.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_search.xml
@@ -36,15 +36,19 @@
             app:boxCornerRadiusTopEnd="16dp"
             app:boxCornerRadiusTopStart="16dp"
             app:boxStrokeColor="@color/black"
+            app:endIconMode="clear_text"
+            app:hintTextColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_search_title">
+            app:layout_constraintTop_toBottomOf="@id/tv_search_title"
+            app:startIconDrawable="@drawable/ic_baseline_search_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tiet_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
+                android:inputType="text"
                 android:minHeight="0dp"
                 android:paddingTop="12dp" />
 
