--- a/Android/ArtI/app/src/main/res/layout/item_art.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_art.xml
@@ -38,7 +38,8 @@
             android:id="@+id/tv_art_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="4dp"
             android:text="@string/art"
             android:textColor="@color/white"
             android:textSize="20sp"
