feat: 장르 배너 페이지 이동 구현

--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -26,6 +26,9 @@
         <action
             android:id="@+id/action_searchFragment_to_artistBannerFragment"
             app:destination="@id/artistBannerFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_genreBannerFragment"
+            app:destination="@id/genreBannerFragment" />
     </fragment>
     <fragment
         android:id="@+id/artworkUploadFragment"
@@ -103,4 +106,8 @@
         android:id="@+id/artistBannerFragment"
         android:name="com.hexa.arti.ui.search.ArtistBannerFragment"
         android:label="ArtistBannerFragment" />
+    <fragment
+        android:id="@+id/genreBannerFragment"
+        android:name="com.hexa.arti.ui.search.GenreBannerFragment"
+        android:label="GenreBannerFragment" />
 </navigation>
