feat: 프로필 편집 UI, 비밀번호 수정 UI 개발

--- a/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
+++ b/Android/ArtI/app/src/main/res/navigation/nav_graph.xml
@@ -107,5 +107,16 @@
         <action
             android:id="@+id/action_myPageFragment_to_portfolioFragment"
             app:destination="@id/portfolioFragment" />
+        <action
+            android:id="@+id/action_myPageFragment_to_profileDetailFragment"
+            app:destination="@id/profileDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileDetailFragment"
+        android:name="com.hexa.arti.ui.profile.ProfileDetailFragment"
+        android:label="ProfileDetailFragment">
+        <argument
+            android:name="detailType"
+            app:argType="integer"/>
     </fragment>
 </navigation>
