--- a/Android/ArtI/app/src/main/res/layout/fragment_my_page.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_my_page.xml
@@ -119,14 +119,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_pass_24"
-            app:layout_constraintEnd_toStartOf="@id/y_page_pass_tv"
+            app:layout_constraintEnd_toStartOf="@id/my_page_pass_tv"
             app:layout_constraintBottom_toTopOf="@+id/my_page_info_btn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/my_page_profile_modify_btn" />
 
         <TextView
             style="@style/MyPageMenuText"
-            android:id="@+id/y_page_pass_tv"
+            android:id="@+id/my_page_pass_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="비밀번호 수정"
